--- a/app/views/users/analysis_partials/_piechart.html.erb
+++ b/app/views/users/analysis_partials/_piechart.html.erb
@@ -55,82 +55,31 @@
 
     */
 
-    var pieData = [
-        {
-          value: 300,
-          color:"#F7464A",
-          highlight: "#FF5A5E",
-          label: "Red"
-        },
-        {
-          value: 50,
-          color: "#46BFBD",
-          highlight: "#5AD3D1",
-          label: "Green"
-        },
-        {
-          value: 100,
-          color: "#FDB45C",
-          highlight: "#FFC870",
-          label: "Yellow"
-        },
-        {
-          value: 40,
-          color: "#949FB1",
-          highlight: "#A8B3C5",
-          label: "Grey"
-        },
-        {
-          value: 120,
-          color: "#4D5360",
-          highlight: "#616774",
-          label: "Dark Grey"
-        }
 
-      ];
 
 
 
 
       $(document).ready(function(){
 
-            var testPeriodWeek = {
-      'period': 'week',
-      'week': 41,
-      'month': undefined,
-      'year': 2015
-    }
+        /* default charts based on today */
 
-    var testPeriodMonth = {
-      'period': 'month',
-      'week': undefined,
-      'month': 10,
-      'year': 2015
-    }
-
-    var testPeriodYear = {
-      'period': 'year',
-      'week': undefined,
-      'month': undefined,
-      'year': 2015
-    }
-
-    getUsageData(testPeriodYear, dataHash);
-
-        //default graph
-        var ctx = $('#data-piechart .chart-month canvas').get(0).getContext("2d");
-        window.myPie = new Chart(ctx).Pie(pieData);
-
-        //when change of inputs
+        /* when change of inputs */
         var pieChartInputs = $('#data-piechart section .choose-period');
         pieChartInputs.change(function(){
           var inputValue = $(this).val(),
               periodData = getPeriodData(inputValue),
-              usageData = getUsageData(periodData, dataHash);
-
+              usageData = getUsageData(periodData, dataHash),
+              pieData = getPieData(usageData);
           
+          var ctx = $(this).parent().find('canvas').get(0).getContext('2d');
+          window.myPie = new Chart(ctx).Pie(pieData);
         });
+
+
       });
+      
+
 
 
 
