found google charts stacked column chart. Example works, will now implement

--- a/app/views/users/analyses.html.erb
+++ b/app/views/users/analyses.html.erb
@@ -1,30 +1,68 @@
+<!--Load the AJAX API-->
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+<script type="text/javascript">
 
+  // Load the Visualization API library and the piechart library.
+  google.load('visualization', '1', {'packages':['corechart']});
+  google.setOnLoadCallback(drawChart);
+     // ... draw the chart...
 
+     // Callback that creates and populates a data table,
+      // instantiates the pie chart, passes in the data and
+      // draws it.
+      // function drawChart() {
+
+      // // Create the data table.
+      // var data = new google.visualization.DataTable();
+      // data.addColumn('string', 'Topping');
+      // data.addColumn('number', 'Slices');
+      // data.addRows([
+      //   ['Mushrooms', 3],
+      //   ['Onions', 1],
+      //   ['Olives', 1],
+      //   ['Zucchini', 1],
+      //   ['Pepperoni', 2]
+      // ]);
+
+      // // Set chart options
+      // var options = {'title':'How Much Pizza I Ate Last Night',
+      //                'width':400,
+      //                'height':300};
+
+      // // Instantiate and draw our chart, passing in some options.
+      // var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+      // chart.draw(data, options);
+    // }
+</script>
+
+<!-- <div id="chart_div"></div>
+ -->
 <section id="data-analysis-screen">
   <h1>analyses</h1>
-
-  <section id="raw-data">
-    <%@data_hash.each do |cat, cat_data|%>
-    	<div>
-        <h3><%=cat%></h3>
-        <ul>
-          <%cat_data[:entries].each do |entry|%>
-            <li>
-              <p>starttime: <%=entry[:starttime].to_s%></p>
-              <p>endtime: <%=entry[:endtime].to_s%></p>
-              <p>entry date: <%=entry[:entry_date].to_s%></p>
-            </li>
-          <%end%>
-        </ul>
-      </div>
-    <%end%>
-  </section>
   
+ 
+
+  <section id="data-stacked-barchart">
+    <%= render 'users/analysis_partials/stacked_columnchart' %>
+  </section>
+
+
+
+
+  <section id="data-piechart">
+    <%= render 'users/analysis_partials/piechart' %>
+  </section>
+
+
+  
+
+
+
+
+
   <!-- converts ruby object to JSON -->
   <!-- IMPORTANT -->
   <%= javascript_tag "var dataHash = #{@data_hash.to_json}" %> 
-
-
   <script>
     function hmsToSeconds(s) {
       var b = s.split(':');
@@ -241,15 +279,6 @@
     
     
   </script>
-
-
-
-
-  <!-- script must come before this -->
-
-  <section id="data-piechart">
-    <%= render 'users/analysis_partials/piechart' %>
-  </section>
 
 
 </section>
