--- a/app/views/users/analysis_partials/_stacked_columnchart.html.erb
+++ b/app/views/users/analysis_partials/_stacked_columnchart.html.erb
@@ -1,6 +1,5 @@
 <h1>Stacked ColumnChart</h1>
 
-<div id="example-chart"></div>
 
 <section id="individual-columnchart">
   <div></div>
@@ -8,8 +7,8 @@
 
 
 
-<section id="average-columnchart">
-  
+<section id="average-columnchart"> <!-- give week/month/year option-->
+  <div></div>
 </section>
 
 
@@ -19,71 +18,28 @@
 
   $(document).ready(function(){
     
-    
-
-    //Example
-    var exampleChart = $('#example-chart');
-    var data = google.visualization.arrayToDataTable([
-        ['Genre', 'Fantasy & Sci Fi', 'Romance', 'Mystery/Crime', 'General','Western', 'Literature', { role: 'annotation' } ],
-        ['2010', 10, 24, 20, 32, 18, 5, ''],
-        ['2020', 16, 22, 23, 30, 16, 9, ''],
-        ['2030', 28, 19, 29, 30, 12, 13, '']
-      ]);
-
-      var options = {
-        width: 600,
-        height: 400,
-        legend: { position: 'top', maxLines: 3 },
-        bar: { groupWidth: '75%' },
-        isStacked: true,
-      };
-      var chart = new google.visualization.ColumnChart(exampleChart[0]);
-      chart.draw(data, options);
-
-      //
-
-
-      /*REAL STUFF HERE */
-      
-      function makeWeekChart(weekArray, chartEl) {
-        var data = google.visualization.arrayToDataTable(weekArray),
-            options = {
-              width: 600,
-              height: 400,
-              legend: { position: 'top', maxLines: 3 },
-              bar: { groupWidth: '75%' },
-              isStacked: true,
-            },
-            chart = new google.visualization.ColumnChart(chartEl[0]) ;
-
-        chart.draw(data, options);
-      }
-    
       /* Draw individual column chart for this week */
       var thisWeekUsageChart = $('#individual-columnchart div'),
           weekArray = getWeekArray(dataHash);
 
       makeWeekChart(weekArray, thisWeekUsageChart);
 
-
-      /*
-        google charts takes this type of array:
-        [ 
-          ['CATEGORY', 'cat1', 'cat2', {role: 'annotation'}],
-          ['Sunday', num1, num2, ''],
-          ['Monday', num1, num2, ''],
-
-        ]
-
-  
-      */
-      
-
-      
-
-
   });
 
+
+  function makeWeekChart(weekArray, chartEl) {
+    var data = google.visualization.arrayToDataTable(weekArray),
+        options = {
+          width: 600,
+          height: 400,
+          legend: { position: 'top', maxLines: 3 },
+          bar: { groupWidth: '75%' },
+          isStacked: true,
+        },
+        chart = new google.visualization.ColumnChart(chartEl[0]) ;
+
+    chart.draw(data, options);
+  }
 
   function getWeekArray(dataHash){
     var weekData = [
@@ -142,22 +98,16 @@
       }
 
 
-      //insert data from categoryHrsOnDays into weekData;
-      
+      /* insert data from categoryHrsOnDays into weekData; */
       var i = 0;
       for (var item in categoryHrsOnDays) {
-        
         var weekDataArray = weekData[i],
             indexToInsertAt = weekDataArray.length - 1;
 
-        weekDataArray.splice(indexToInsertAt, 0, categoryHrsOnDays[item]);
-        
+        weekDataArray.splice(indexToInsertAt, 0, categoryHrsOnDays[item]);        
         i ++
-      }
-
-    
+      }   
     }
-
     return weekData;
   }
 
@@ -167,23 +117,9 @@
   }
 
   function getDay(date) {
-    var day = new Date(Date.parse(date)).getDay();
-    if (day === 0) {
-      day = 'Sunday';
-    } else if (day === 1) {
-      day = 'Monday';
-    } else if (day === 2) {
-      day = 'Tuesday';
-    } else if (day === 3) {
-      day = 'Wednesday';
-    } else if (day === 4) {
-      day = 'Thursday';
-    } else if (day === 5) {
-      day = 'Friday';
-    } else if (day === 6) {
-      day = 'Saturday';
-    }
-    return day;
+    var day = new Date(Date.parse(date)).getDay(),
+        dayNameArray = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
+    return dayNameArray[day];
   }
 
 </script>
